--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=FakeStore
+spring.security.user.name=admin
+spring.security.user.password=admin123
+
+productservice.type=fakeStoreProductService
+server.port=3000
+fakestore.api.url=https://fakestoreapi.com
+fakestore.api.paths.product=/products
+
+server.error.include-stacktrace=never
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://localhost:3306/sep23productservice
+spring.datasource.username=sep23productservice
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
